Bug 186455 - sieve process sometimes hangs taking 60% of CPU time
Summary: sieve process sometimes hangs taking 60% of CPU time
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: sieve (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Marc Mutz
URL:
Keywords:
: 194459 194634 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-07 15:25 UTC by Pavel Baranchikov
Modified: 2009-07-07 23:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Baranchikov 2009-03-07 15:25:32 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    SuSE RPMs

Kio_sieve process sometimes hangs taking the CPU time of the whole processor core (I have 2 cores). ps ax looks like this:

--8<--------------------------------------------------------------------
pavel     5043  0.0  0.3 187796 15340 ?        S    15:16   0:00 /usr/bin/kwalletmanager --kwalletd
pavel     5044  0.0  0.2 202852 12008 ?        S    15:16   0:00 kdeinit4: kio_imap4 [kdeinit] imaps local:/tmp/ksocket-pavel/klauncherMT468
pavel     5046 60.1  0.2 196888 10200 ?        R    15:16  35:21 kdeinit4: kio_sieve [kdeinit] sieve local:/tmp/ksocket-pavel/klauncherMT468
pavel     5053  0.1  0.8 471196 35420 ?        Sl   15:17   0:05 /usr/bin/stardict
--8<--------------------------------------------------------------------

There was a very short discussion on kde forums: http://forum.kde.org/kio-sieve-hangs-sometimes-t-35770.html.

The kio_sieve process hangs until I kill it. After killing, KMail works properly, no errors occurs. But if I do not kill the process, it takes too many CPU time.

The process appears to hang even in sessions, where I do not make some changes to sieve scripts.
Comment 1 Michael Kreitzer 2009-05-29 17:56:06 UTC
There's a good chance this may be related to the bug I posted: 194459

My problem is I do not know how to reproduce the issue. If I could I'd build debug binaries and, well, debug it :) Are you able to provide steps to reproduce?
Comment 2 Pavel Baranchikov 2009-05-29 19:43:29 UTC
> Are you able to provide steps to reproduce?

It is sad to say, but I do not know how to reproduce it too. The situation is very similar to 194459. I think, the situation is same :)... I think, but do not know.
Comment 3 Thomas McGuire 2009-07-07 23:34:21 UTC
*** Bug 194634 has been marked as a duplicate of this bug. ***
Comment 4 Thomas McGuire 2009-07-07 23:35:16 UTC
*** Bug 194459 has been marked as a duplicate of this bug. ***
Comment 5 Thomas McGuire 2009-07-07 23:44:14 UTC
SVN commit 992886 by tmcguire:

Fix readLine() going into an infinte loop when the connection gets disconnected.
The problem was that waitForReadyRead() did of course not work.

Thanks to Telefonica for helping me reproduce the problem and Andreas for seeing and
fixing the problem.

This should fix the bug that kio_sieve uses 100% CPU.

BUG: 186455


 M  +1 -1      tcpslavebase.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=992886