Fix readLine() going into an infinte loop when the connection gets disconnected. The problem was that waitForReadyRead() did of course not work.

Thanks to Telefonica for helping me reproduce the problem and Andreas for seeing and
fixing the problem.

This should fix the bug that kio_sieve uses 100% CPU.

BUG: 186455

svn path=/trunk/KDE/kdelibs/; revision=992886